<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- sign_in strings -->

    <string name="n_o_tem_um_conta__cadastre_se_string">Não tem uma conta? Cadastre-se</string>
	<string name="ou_string">Ou</string>
	<string name="concluido_string">CONCLUIDO</string>
	<string name="esqueceu_senha_string">Esqueceu senha</string>
	<string name="email_string">Email</string>
	<string name="senha_string">Senha</string>
	<string name="insira_seu_e_mail_string">Insira seu e-mail</string>
	<string name="insira_sua_senha_string">Insira sua senha</string>

		<!-- create_new_account strings -->

	<string name="crie_sua_conta_string">Crie sua conta</string>
	<string name="celular_ek1_string">Celular</string>
	<string name="insira_seu_celular_string">Insira seu celular</string>
	<string name="nome_completo_ek1_string">Nome Completo</string>
    <string name="senha_ek1_string">Senha</string>

	<!-- add_device strings -->

	<string name="buscar_com_bluetooth_ou_wi_fi_string">Buscar com Bluetooth ou Wi-fi</string>
	<string name="ler_qrcode_do_manual_string">Ler QrCode do manual </string>
	<string name="para_iniciar__adicione_um_novo_dispositivo_string">Para iniciar, adicione um novo dispositivo</string>
	<string name="facebook" />
    <string name="pado_logo">Pado logo</string>
    <string name="bluetooth_button">Bluetooth Button</string>
    <string name="qrcode_button">qrcode button</string>
	<string name="settings_button">Settings button</string>
	<string name="head_rectangle">head rectangle</string>
	<string name="wi_fi_button">wi_fi button</string>

		<!-- unlock strings -->

	<string name="nome_fechadura_string">Nome fechadura</string>
	<string name="clique_no_cadeado_para_abrir_string">Clique no cadeado para abrir</string>

    <!-- lock strings -->
	<string name="clique_no_cadeado_para_fechar_string">Clique no cadeado para fechar</string>

	<!-- settings strings -->
	<string name="configura__es_string">Configurações</string>
	<string name="ativar_leitor_de_biometria_string">Leitor biometria</string>
	<string name="restaurar_padr_o_de_fabrica_string">Restaurar padrão de fabrica</string>
	<string name="encerrar_sess_o_string">Encerrar Sessão</string>
	<string name="ativar_leitor_facial_string">Reconhecimento facial</string>
	<string name="ativar_integracao_google_string">Integração Google</string>
	<string name="ativar_integracao_alexa_string">Integração Alexa</string>
	<string name="ativar_comandos_por_voz_string">Comandos por voz</string>
	<string name="gerenciar_grupos_string">Gerenciar grupos</string>
	<string name="trocar_tema_do_app_string">Trocar tema do App</string>
	<string name="functions_group">Functions group</string>
	<string name="amazon_alexa_logo">amazon_alexa_logo</string>

	<!-- searching_device strings -->

	<string name="procurando_dispositivos_____string">Procurando dispositivos ...</string>
	<string name="adicionar_string">Adicionar</string>

	<string name="app_name">Simple BLE Terminal</string>
    <string name="devices">Bluetooth LE Devices</string>

    <string name="bluetooth_permission_title">Bluetooth permission</string>
    <string name="bluetooth_permission_grant">Bluetooth permission is required by this App. Please grant in next dialog.</string>
    <string name="bluetooth_permission_denied">Bluetooth permission was permanently denied. You have to enable permission \"%s\" in App settings.</string>

    <string name="location_permission_title">Location permission</string>
    <string name="location_permission_grant">This app does not use location information, but scanning for Bluetooth LE devices requires this permission. Please grant in next dialog.</string>
    <string name="location_permission_denied">As location permission has not been granted, this app cannot scan for Bluetooth LE devices.</string>

    <string name="pairing_request">PAIRING requested\n-> Perform pairing steps. Connect again</string>
</resources>
