<HorizontalScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<ScrollView
        android:layout_width="wrap_content"
		android:layout_height="match_parent">

		<RelativeLayout
            android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<View
                android:background="@drawable/_bg__create_new_account_shape"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="412dp"
				android:layout_height="845dp" />


			<TextView
                android:layout_centerHorizontal="true"
				android:textStyle="bold"
				android:textSize="26sp"
				android:textColor="@color/crie_sua_conta_color"
				android:layout_marginTop="15dp"
				android:layout_width="180dp"
				android:layout_height="45dp"
				android:text="@string/crie_sua_conta_string"
				tools:ignore="VisualLintOverlap" />

			<TextView
                android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="22sp"
				android:textColor="@color/ou_color"
				android:layout_marginLeft="195dp"
				android:layout_marginTop="670dp"
				android:layout_width="44dp"
				android:layout_height="59dp"
				android:text="@string/ou_string"
				android:layout_centerHorizontal="true"
				 />


			<LinearLayout
                android:layout_marginStart="16dp"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_centerHorizontal="true">

				<FrameLayout
                    android:layout_width="match_parent"
					android:layout_height="match_parent"
					tools:ignore="UselessParent">

					<RelativeLayout
                        android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_marginTop="75dp"
						android:layout_marginStart="0dp">

						<TextView
                            android:textSize="24sp"
							android:textColor="@color/teal_900"
							android:layout_marginLeft="5dp"
							android:layout_marginTop="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/nome_completo_ek1_string"
							/>

						<View
                            android:background="@drawable/rectangle_8_shape"
							android:alpha="0.15000000596046"
							android:layout_marginStart="0dp"
							android:layout_marginTop="50dp"
							android:layout_width="375dp"
							android:layout_height="60dp"
							/>

						<EditText android:id="@+id/full_name"
							android:layout_gravity="center_horizontal|center"
							android:textSize="20sp"
							android:maxLength="30"
							android:layout_marginTop="50dp"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:minHeight="60dp"
							android:paddingStart="20dp"
							android:textColor="@color/white"
							android:textColorHint="@color/white"
							android:hint="@string/nome_completo_ek1_string"
							/>
					</RelativeLayout>

					<RelativeLayout
                        android:layout_marginTop="200dp"
						android:layout_marginStart="1dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							android:layout_width="65dp"
							android:layout_height="35dp"
							android:layout_gravity="center_horizontal|center"
							android:layout_marginLeft="5dp"
							android:layout_marginTop="0dp"
							android:gravity="center"
							android:text="@string/email_string"
							android:textColor="@color/teal_900"
							android:textSize="24dp"
							tools:ignore="TextSizeCheck" />

						<View
                            android:background="@drawable/rectangle_6_shape"
							android:alpha="0.15000000596046"
							android:layout_marginStart="0dp"
							android:layout_marginTop="50dp"
							android:layout_width="375dp"
							android:layout_height="60dp"/>

						<EditText android:id="@+id/user_email"
							android:layout_gravity="center_horizontal|center"
							android:textSize="20sp"
							android:maxLength="30"
							android:layout_marginTop="50dp"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:minHeight="60dp"
							android:paddingStart="20dp"
							android:textColor="@color/white"
							android:textColorHint="@color/white"
							android:hint="@string/insira_seu_e_mail_string"
							/>

					</RelativeLayout>

					<RelativeLayout
                        android:layout_marginTop="325dp"
						android:layout_marginStart="1dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center_horizontal|center"
							android:layout_marginLeft="5dp"
							android:layout_marginTop="0dp"
							android:gravity="center"
							android:text="@string/celular_ek1_string"
							android:textColor="@color/teal_900"
							android:textSize="24dp"
							tools:ignore="TextSizeCheck" />

						<View
                            android:background="@drawable/rectangle_7_shape"
							android:alpha="0.15000000596046"
							android:layout_marginStart="0dp"
							android:layout_marginTop="50dp"
							android:layout_width="375dp"
							android:layout_height="60dp"/>

						<EditText android:id="@+id/phone"
							android:layout_gravity="center_horizontal|center"
							android:textSize="20sp"
							android:maxLength="30"
							android:layout_marginTop="50dp"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:minHeight="60dp"
							android:paddingStart="20dp"
							android:textColor="@color/white"
							android:textColorHint="@color/white"
							android:hint="@string/insira_seu_celular_string"
							/>

					</RelativeLayout>

					<RelativeLayout
                        android:layout_marginStart="1dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="450dp"
						>

						<TextView
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_gravity="center_horizontal|center"
							android:layout_marginLeft="5dp"
							android:layout_marginTop="0dp"
							android:gravity="center"
							android:text="@string/senha_ek1_string"
							android:textColor="@color/teal_900"
							android:textSize="24dp"
							tools:ignore="TextSizeCheck" />

							<FrameLayout
								android:layout_width="375dp"
								android:layout_height="60dp"
								android:layout_marginStart="0dp"
								android:layout_marginTop="50dp"
								>
								<include
									layout="@layout/password_comp"/>
							</FrameLayout>


					</RelativeLayout>

				</FrameLayout>

			</LinearLayout>

			<RelativeLayout
                android:layout_marginTop="730dp"
				android:layout_marginStart="35dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true">

				<View
                    android:background="@drawable/rectangle_66_shape"
					android:alpha="0"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="345dp"
					android:layout_height="75dp" />


				<RelativeLayout
                    android:layout_marginTop="7dp"
					android:layout_marginStart="70dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
                        android:layout_width="60dp"
						android:layout_height="60dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/ellipse_16_shape"
						android:clickable="true"
						android:contentDescription="@string/facebook"
						android:focusable="true"
						tools:ignore="SpeakableTextPresentCheck" />

					<ImageView
						android:id="@+id/facebook_button"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginStart="10dp"
						android:layout_marginTop="10dp"
						android:clickable="true"
						android:contentDescription="facebook_logo_blue_circle_large_transparent_png_2"
						android:focusable="true"
						android:src="@drawable/facebook_logo_blue_circle_large_transparent_png_2"
						tools:ignore="TouchTargetSizeCheck" />

				</RelativeLayout>


				<RelativeLayout
                    android:layout_marginTop="7dp"
					android:layout_marginStart="142.66dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
                        android:layout_width="60dp"
						android:layout_height="60dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/ellipse_16_ek1_shape"
						android:clickable="true"
						android:focusable="true"
						tools:ignore="SpeakableTextPresentCheck" />

					<ImageView
						android:id="@+id/apple_button"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginStart="10dp"
						android:layout_marginTop="10dp"
						android:clickable="true"
						android:contentDescription="vector"
						android:focusable="true"
						android:src="@drawable/apple_logo"
						tools:ignore="TouchTargetSizeCheck" />

				</RelativeLayout>


				<RelativeLayout
                    android:layout_marginTop="7dp"
					android:layout_marginStart="215.31dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View
                        android:layout_width="60dp"
						android:layout_height="60dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/ellipse_17_shape"
						android:clickable="true"
						android:focusable="true"
						tools:ignore="SpeakableTextPresentCheck" />

					<ImageView
						android:id="@+id/google_button"
						android:layout_width="40dp"
						android:layout_height="40dp"
						android:layout_marginStart="10dp"
						android:layout_marginTop="10dp"
						android:clickable="true"
						android:contentDescription="google_logo_png_suite_everything_you_need_know_about_google_newest_0_2"
						android:focusable="true"
						android:src="@drawable/google_logo_png_suite_everything_you_need_know_about_google_newest_0_2"
						tools:ignore="TouchTargetSizeCheck" />

				</RelativeLayout>

			</RelativeLayout>

			<RelativeLayout android:id="@+id/done_button"
				android:layout_marginTop="600dp"
				android:layout_marginStart="25dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerHorizontal="true">

				<ImageView android:id="@+id/conclued_bt"
					android:src="@drawable/rectangle_6_ek1"
					android:contentDescription="rectangle_6_ek1"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="375dp"
					android:layout_height="60dp"
					android:clickable="true"
					android:focusable="true"/>

				<TextView
                    android:textStyle="bold"
					android:layout_centerVertical="true"
					android:layout_centerHorizontal="true"
					android:textSize="22sp"
					android:textColor="@color/crie_sua_conta_color"
					android:layout_marginLeft="125dp"
					android:layout_marginTop="19dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/concluido_string"
					 />

			</RelativeLayout>

		</RelativeLayout>

	</ScrollView>

</HorizontalScrollView>